--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 This is a program that will install Metasploit-Framework and Armitage on to Ubuntu, though I assume it will work on any Debian-based Linux Distro.
-This was made using a combonation of my own code, darkoperator's, and a nightly Metasploit installer from rapid7. 
-Please enjoy this program and how easy it is to install these tools using it.
+This was made using a combination of my own code, darkoperator's, and a nightly Metasploit installer from rapid7. 
+Please enjoy this program.
 
 In order to run this program navigate to the folder it is in and type the following into a terminal:
 
