--- a/README
+++ b/README
@@ -13,4 +13,4 @@ To start Armitage type sudo -E armitage.
 
 Thank you so much for using my code!
 
-I disclaim ALL responsibility for what you do with the programs that this code will install.
+I disclaim ALL responsibility for what you do with the programs that this code will install as well as the code itself.
